<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@color/color_fondo"
    android:orientation="vertical"
    android:padding="8dip">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="16dip"
        android:text="@string/activity_label"
        android:textColor="@color/light_blue"
        android:textSize="@dimen/font_large" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">


    </RelativeLayout>

    <TextView
        android:id="@+id/textIngresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tw_colocar_numero"
        android:textSize="@dimen/font_medium"/>

    <EditText
        android:id="@+id/text_Numero2"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:ems="10"
        android:inputType="number"
        android:background="@color/color_edit"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/comprobar"
            android:layout_width="94dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_comprobar"
            android:backgroundTint="@color/color_botones"/>
        />

        <Button
            android:id="@+id/button_jugar_otra_vez"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_otra_vez"
            android:backgroundTint="@color/color_botones"/>
        />

        <Button
            android:id="@+id/button_salir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_salir"
            android:backgroundTint="@color/color_botones"/>
        />

    </LinearLayout>

    <TextView
        android:id="@+id/textIncorrecto1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="@dimen/font_medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/adivina2" />
    </LinearLayout>


</LinearLayout>

