<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@color/color_fondo"
    android:orientation="vertical"
    android:padding="8dip">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="16dip"
        android:text="@string/activity_label"
        android:textColor="@color/light_blue"
        android:textSize="@dimen/font_large" />

    <TextView
        android:id="@+id/textIngresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tw_adivina"
        android:textSize="@dimen/font_medium"/>

    <EditText
        android:id="@+id/text_Numero_3"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="@color/color_edit"
        android:ems="10"
        android:inputType="number" /><![CDATA[/>

    ]]>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_check2"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_botones"
            android:text="@string/btn_comprobar" />
        />

        <Button
            android:id="@+id/button_volver_jugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_botones"
            android:text="@string/btn_volver_jugar" />
        />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/adivina2" />
    </LinearLayout>


</LinearLayout>

