<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fondo"
    android:padding="8dip"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="16dip"
        android:text="@string/activity_label"
        android:textColor="@color/light_blue"
        android:textSize="@dimen/font_large" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tw_ingresar_numero"
        android:textSize="@dimen/font_medium" />

    <EditText
        android:id="@+id/textNumero1"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="@color/color_edit"
        android:ems="10"
        android:inputType="number" />/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textSize="@dimen/font_medium">

        <Button
            android:id="@+id/button_startm"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_botones"
            android:text="@string/btn_comenzar" />
        />

        <Button
            android:id="@+id/button_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_botones"
            android:text="@string/btn_salir" />
        />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewValidar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/adivina2" />
    </LinearLayout>
</LinearLayout>

