<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fondo"
    android:padding="8dip"
    >

    <TextView
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:accessibilityHeading="false"
        android:gravity="center_horizontal"
        android:paddingBottom="16dip"
        android:text="@string/activity_label"
        android:textColor="@color/light_blue"
        android:textSize="@dimen/font_large" />

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/text1">

        <Button
            android:id="@+id/btn_start_b"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/btn_play_solo"
            android:backgroundTint="@color/color_botones"/>

    </RelativeLayout>
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@id/text1">
        <Button
            android:id="@+id/btn_start_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startActivityC"
            android:text="@string/btn_multi_player"
            android:backgroundTint="@color/color_botones"/>/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/adivina" />
    </LinearLayout>
</LinearLayout>
